# swaston-cpp

./: CMakeLists.txt  README.md  Source.cpp  main.cpp  swaston_generator.cpp  utf8_tools.cpp
include/: swaston_generator.h  utf8.h  utf8_tools.h
